# AGI-Demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo/: internet_recognition_demo.py  internet_search_demo.py  llm_client_demo.py
src/actions/: __init__.py  content_summarize.py  intent_recognition.py  internet_search.py  schemas.py
src/llm/: base.py  client.py  config.py  factory.py  schemas.py
src/prompts/: action_prompts.py
src/settings/: llm_setting.py
src/tools/: browser_engine.py  schemas.py
src/utils/: re_util.py
