[tool.poetry]
name = "agi-demo"
version = "0.1.0"
description = ""
authors = ["liuminhui <huidbk@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.41.1"
playwright = "^1.46.0"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

